left-align text and fix typst figure line height

--- a/src/styles/type.scss
+++ b/src/styles/type.scss
@@ -7,7 +7,7 @@
 
 	line-height: 1.3;
 
-	text-align: justify;
+	text-align: left;
 	text-wrap: pretty;
 
 	.lining-nums {
@@ -46,6 +46,10 @@
 
 		background-color: #24273a;
 		color: #cad3f5;
+	}
+
+	.typst-doc {
+		font-size: 0.9em;
 	}
 }
 
